@@ -116,9 +116,7 @@ cgi_parse_headers(struct cgi *cgi)
     while ((end = memchr(start, '\n', buffer_end - start)) != NULL) {
         next = end + 1;
         --end;
-        if (likely(*end == '\r'))
-            --end;
-        while (unlikely(end >= start && char_is_whitespace(*end)))
+        while (end >= start && char_is_whitespace(*end))
             --end;
 
         finished = cgi_handle_line(cgi, start, end - start + 1);
