@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.6.20) unstable; urgency=low
 
   * stock: clear stock after 60 seconds idle
   * hstock: remove empty stocks
+  * http-server, http-client, cgi: fixed off-by-one bug in header parser
   * istream-pipe: fix the direct() return value on error
   * istream-pipe: fix formula in range assertion
   * http-cache-memcached: implemented "remove"
